# fly-dnn

./: .gitignore  CMakeLists.txt  README.md
dnn/: CMakeLists.txt
src/dnn/: CMakeLists.txt  Linear.cpp  Linear.h  blob.cpp  blob.h  definition.h  linear.cpp  linear.h  macros.h  node.cpp  node.h  util.h
src/dnn/layers/: convolution_layer.cpp  convolution_layer.h  layer.cpp  layer.h
src/dnn/params/: convolution_param.h  params.h
src/dnn/utility/: logger.cpp  logger.h
test/: CMakeLists.txt  LinearTest.cpp  blob_test.cpp  dnn_main_test.cpp  glog_test.cpp  layer_test.cpp  linear_test.cpp  param_test.cpp
